@startuml

title __ADAPTER's Class Diagram__\n

  namespace in.ashwanik.pdp.adapter {
    class in.ashwanik.pdp.adapter.DocumentWriter {
        + DocumentWriter()
        + save()
    }
  }
  

  namespace in.ashwanik.pdp.adapter {
    class in.ashwanik.pdp.adapter.FileWriter {
        + write()
    }
  }
  

  namespace in.ashwanik.pdp.adapter {
    interface in.ashwanik.pdp.adapter.JsonWriter {
        {abstract} + write()
    }
  }
  

  namespace in.ashwanik.pdp.adapter {
    class in.ashwanik.pdp.adapter.YamlToJsonDocumentAdapter {
        + YamlToJsonDocumentAdapter()
        + write()
    }
  }
  

  namespace in.ashwanik.pdp.adapter {
    interface in.ashwanik.pdp.adapter.YamlWriter {
        {abstract} + write()
    }
  }
  

  namespace in.ashwanik.pdp.adapter {
    class in.ashwanik.pdp.adapter.YamlWriterImpl {
        + write()
    }
  }
  

  in.ashwanik.pdp.adapter.DocumentWriter o-- in.ashwanik.pdp.adapter.JsonWriter : jsonWriter
  in.ashwanik.pdp.adapter.YamlToJsonDocumentAdapter .up.|> in.ashwanik.pdp.adapter.JsonWriter
  in.ashwanik.pdp.adapter.YamlToJsonDocumentAdapter o-- in.ashwanik.pdp.adapter.YamlWriter : yamlWriter
  in.ashwanik.pdp.adapter.YamlWriterImpl .up.|> in.ashwanik.pdp.adapter.YamlWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
